--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ Released   : 20120528
 	<div id="menu">
 		<ul>
 			
-			<li><a href="home.html">প্রথম পাতা</a></li>
+			<li><a href="index.html">প্রথম পাতা</a></li>
 			<li><a href="poj.html">POJ</a></li>
 			<li class="current_page_item"><a href="#">আলতু ফালতু কথা</a></li>		
 		</ul>
