--- a/poj.html
+++ b/poj.html
@@ -24,7 +24,7 @@ Released   : 20120528
 <div id="menu-wrapper">
 	<div id="menu">
 		<ul>
-			<li><a href="home.html">প্রথম পাতা</a></li>
+			<li><a href="index.html">প্রথম পাতা</a></li>
 			<li class="current_page_item"><a href="#">POJ</a></li>
 			<li><a href="about.html">আলতু ফালতু কথা</a></li>
 		</ul>
