Update and rename poj.html to geo.html

--- a/geo.html
+++ b/geo.html
@@ -25,7 +25,7 @@ Released   : 20120528
 	<div id="menu">
 		<ul>
 			<li><a href="index.html">প্রথম পাতা</a></li>
-			<li class="current_page_item"><a href="#">POJ</a></li>
+			<li class="current_page_item"><a href="#">জ্যামিতি</a></li>
 			<li><a href="about.html">আলতু ফালতু কথা</a></li>
 		</ul>
 	</div>
