--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Released   : 20120528
 	<div id="menu">
 		<ul>
 			<li class="current_page_item"><a href="#">প্রথম পাতা</a></li>
-			<li><a href="poj.html">POJ</a></li>
+			<li><a href="geo.html">জ্যামিতি</a></li>
 			<li><a href="about.html">আলতু ফালতু কথা</a></li>
 		</ul>
 	</div>
