--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ Released   : 20120528
 		<ul>
 			
 			<li><a href="index.html">প্রথম পাতা</a></li>
-			<li><a href="poj.html">POJ</a></li>
+			<li><a href="geo.html">জ্যামিতি</a></li>
 			<li class="current_page_item"><a href="#">আলতু ফালতু কথা</a></li>		
 		</ul>
 	</div>
