--- a/geo.html
+++ b/geo.html
@@ -1359,6 +1359,21 @@ pt arr[maxn];
 					<div style="clear: both;">&nbsp;</div>
 				</div> 
 				<!-- end #content -->
+				<div id="sidebar">
+					<ul>
+						<li>
+							<h2>হাবিজাবি জিনিসপত্র</h2>
+							<ul>
+								<li><a href="http://crtl-i.com/PDF/comp_c.pdf">জোসেফ ও'রুর্কে এর বিখ্যাত বই</a></li>
+								<li><a href="https://github.com/dipta007/Competitive-Programming/tree/master/%40DOC%20by%20DIPTA/riaz-geo">রিয়াজুল ইসলাম এর জ্যামিতির বস্তা</a></li>
+								<li><a href="https://github.com/nfssdq/contests/blob/master/JU_Assassins.pdf">নাফিস সাদিক এর টেমপ্লেট</a></li>
+								<li><a href="https://docs.google.com/spreadsheets/d/1yyCW_0ZeIsnEHawzsGV0JnzQn7L-bml2ueHt_eZHb64/pub?output=html"></a>শাহরিয়ার রউফ নাফি এর প্রবলেম লিস্ট</li>
+								<li><a href="https://codeforces.com/blog/entry/16283?#comment-211977">কয়েকটা প্রবলেম</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+				<!-- end #sidebar -->
 				<div style="clear: both;">&nbsp;</div>
 			</div>
 		</div>
