--- a/geo.html
+++ b/geo.html
@@ -1821,6 +1821,7 @@ pt a[maxn];
 						<li>
 							<h2>হাবিজাবি জিনিসপত্র</h2>
 							<ul>
+								<li><a href="http://geomalgorithms.com/algorithms.html" target="_blank">ভেক্টর জ্যামিতি ও অন্যান্য জ্ঞান</a></li>
 								<li><a href="http://crtl-i.com/PDF/comp_c.pdf" target="_blank">কম্পিউটেশনাল জ্যামিতি - জোসেফ ও'রুর্কে</a></li>
 								<li><a href="https://vlecomte.github.io/cp-geo.pdf" target="_blank">ভিক্টর ল্যুকো'র বই</a></li>
 								<li><a href="https://github.com/dipta007/Competitive-Programming/tree/master/%40DOC%20by%20DIPTA/riaz-geo" target="_blank">রিয়াজুল ইসলাম এর জ্যামিতির রেপো</a></li>
